feat: add login and register of users, so the implementation of apitokens
